--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "express": "^5.1.0",
+    "mysql2": "^3.14.2",
     "node-telegram-bot-api": "^0.66.0"
   }
 }
